--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,8 @@
 // Home Content
 
 .home {
+ 
+  
 @media @phone {
   .flex-center();
   flex-flow: column wrap;
@@ -9,6 +11,7 @@
     img{
       width:100%;
       .border-radius(10px);
+      margin-top: 16%;
 
       @media @phone {
         .border-radius(5px);
