--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,13 +1,16 @@
 // Navigation code here
 .nav-content{
     display: flex;
+    position:fixed;
+    width:100%;
     flex-direction: column;
     justify-content:space-between;
     align-items: center;
-    background: @nav-bg;
+    background: @nav-opacity-bg;
     padding: 20px; 
     border-bottom: 1px solid @nav-border;
     font-size: 4rem;
+    
 
     h1{
        margin-bottom: 20px; 
